--- a/game/game.html
+++ b/game/game.html
@@ -3,22 +3,26 @@
 <head>
     <meta charset="UTF-8">
 
+    <script>JSWorks = {}; __JSWorks_services__ = [];</script>
+
     <script src="/babylonjs/babylon.js"></script>
+    <script src="/game/babylon.objFileLoader.min.js"></script>
+    <script src="/jsworks/jsworks.js"></script>
 
     <title>Game Tech Preview</title>
 
     <style>
         html, body {
             overflow: hidden;
-            width   : 100%;
-            height  : 100%;
-            margin  : 0;
-            padding : 0;
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
         }
 
         #render-canvas {
-            width   : 100%;
-            height  : 100%;
+            width: 320px;
+            height: 240px;
             touch-action: none;
         }
     </style>
